--- a/src/components/sections/contact/contact.scss
+++ b/src/components/sections/contact/contact.scss
@@ -80,7 +80,10 @@
       &__input-email,
       &__textarea {
         width: 100%;
-        min-width: 200px;
+
+        @include custom-respond-to(1024) {
+          width: calc(50% - 7.5px);
+        }
 
         font-size: 0.9rem;
         padding: 12px;
@@ -102,6 +105,14 @@
 
       &__button {
         margin: 0;
+      }
+
+      &__error {
+        width: 100%;
+        padding: 1vh 1vw;
+        background: #ed3f32;
+        color: #f5f5f5;
+        font-weight: 600;
       }
     }
   }
