--- a/src/components/sections/services/services.scss
+++ b/src/components/sections/services/services.scss
@@ -11,7 +11,7 @@
       rgb(245, 245, 245, 0.4),
       rgb(245, 245, 245, 0.6)
     ),
-    url("../../../assets/images/services/bg-services.webp") center/cover fixed;
+    url("../../../assets/images/services/bg-services.webp") center/cover fixed !important;
 
   display: flex;
   justify-content: center;
