--- a/src/components/sections/contact/contact.scss
+++ b/src/components/sections/contact/contact.scss
@@ -7,12 +7,10 @@
 
   box-sizing: border-box;
 
-  background: linear-gradient(
-      0deg,
-      rgb(245, 245, 245, 0.4),
-      rgb(245, 245, 245, 0.6)
-    ),
-    url("../../../assets/images/contact/bg-contact.webp") center/cover fixed !important;
+  background: url("../../../assets/images/contact/bg-contact.webp") center/cover
+      fixed,
+    linear-gradient(0deg, rgb(245, 245, 245, 0.4), rgb(245, 245, 245, 0.6));
+  background-blend-mode: lighten;
 
   display: flex;
   justify-content: center;
